	* removed the init() method from the group model and joined it with the constructor
	* added fallback to default to the LLL view helper if there's no label for the current language
	* changed local lang labels to use underscores instead of dots as separator to make it possible to overwrite labels using TS

2008-09-08 Frank Naegler  <typo3@naegler.net>

	* added tx_community_controller_ListGroupsApplication

2008-09-06 Frank Naegler  <typo3@naegler.net>

	* added sending SystemMessages on group events
	* added confirmation handling to tx_community_controller_EditGroupApplication

2008-09-05 Frank Naegler  <typo3@naegler.net>

	* added tx_community_controller_NewGroupApplication
	* improve and add new ajax functions to EditGroup Application
	* added ajax image upload to EditGroup Application

2008-09-04 Frank Naegler  <typo3@naegler.net>

	* added tx_community_controller_EditGroupApplication
	* added tx_community_controller_groupprofile_ProfileActionsWidget
	* added tx_community_view_groupprofile_ProfileActions
	* added profileactionswidget.htm

2008-09-03 Frank Naegler  <typo3@naegler.net>

	* coompleted the tx_community_model_Group
	* extend fe_groups table
	* added findFriends() to tx_community_model_UserGateway
	* added empty findByRoles() to tx_community_model_UserGateway
	* some changes to tx_community_model_Group, tx_community_model_GroupGateway and tx_community_model_GroupProfile

2008-09-02 Frank Naegler  <typo3@naegler.net>

	* added setUid() to tx_community_model_User, needed by community_messages

2008-09-01 Frank Naegler  <typo3@naegler.net>

	* completed getApplication() and getAllApplications() in tx_community_ApplicationManager
	* added getTypoScriptConfiguration to tx_community_controller_AbstractCommunityApplication

2008-08-31 Ingo Renner  <ingo@typo3.org>

	* added the privacy settings view to the privacy application
	* added a method to the LLL view helper so that it can resolve full paths of labels, starting with EXT:...